--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.firebase:firebase-storage:20.2.0'
+
+    //CokeImplementacionParaCircularImagen
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
 
 kapt {
